--- a/app/src/main/res/layout/bottom_sheet_info.xml
+++ b/app/src/main/res/layout/bottom_sheet_info.xml
@@ -40,9 +40,10 @@
             android:maxLines="1"
             android:singleLine="true"
             android:textColor="@color/azul"
+            android:fontFamily="@font/nunito_bold"
             android:textSize="22sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/ped_route_btn"
+            app:layout_constraintEnd_toStartOf="@+id/btnRuta"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view" />
 
@@ -105,6 +106,7 @@
             android:textColor="@color/blue_light"
             android:textSize="17sp"
             android:textStyle="bold"
+            android:fontFamily="@font/nunito_bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
@@ -114,7 +116,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:lines="2"
             android:maxLines="2"
@@ -156,6 +158,7 @@
                 android:layout_marginEnd="16dp"
                 android:foregroundGravity="top"
                 android:gravity="top"
+                android:fontFamily="@font/nunito_bold"
                 android:text="Cliente"
                 android:textColor="@color/blue_light"
                 android:textSize="14sp"
