--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="gray">#DBDBDB</color>
     <color name="green">#4CAF50</color>
     <color name="green_background">#CCF8CE</color>
-    <color name="red">#F85F55</color>
+    <color name="red">#F44336</color>
     <color name="rojo">#F44336</color>
     <color name="yellow">#FFC107</color>
     <color name="gray_ligth">#DEDFE3</color>
